--- a/src/app/create-a-carpool/create-a-carpool.component.css
+++ b/src/app/create-a-carpool/create-a-carpool.component.css
@@ -1,14 +1,17 @@
 section {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 
 .jumbotron {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
+  height: 200px;
 }
 
 main {
   position: relative;
   top: 100px;
+  margin-top: -100px;
+  padding-bottom: 110px;
 }
 
 p {
@@ -22,4 +25,8 @@ h1.app-title {
 
 #button {
   margin-top: 5px;
+}
+
+#size {
+  padding: 0px 0px 0px 0px;
 }
